[gd_scene load_steps=14 format=2]

[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/Resources/OSAppWindow.tres" type="StyleBox" id=1]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/sprites/os_app_close_normal.png" type="Texture" id=2]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/sprites/os_app_close_disabled.png" type="Texture" id=3]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/sprites/os_app_close_hover.png" type="Texture" id=4]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/AppNavigator.gd" type="Script" id=5]
[ext_resource path="res://addons/Popochiu/fonts/monkeyisland-1991.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/Icon.gd" type="Script" id=7]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/AppRegister.tscn" type="PackedScene" id=8]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/sprites/os_register.png" type="Texture" id=9]
[ext_resource path="res://popochiu/GraphicInterface/Popups/PC/Installer.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Loader:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 201, 124 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Loader:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Loader:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.741176, 1, 0.792157, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Loader:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 201, 124 ), Vector2( 201, 124 ), Vector2( 201, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Loader:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 124 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Loader:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.741176, 1, 0.792157, 1 ), Color( 0.741176, 1, 0.792157, 1 ), Color( 0.741176, 1, 0.792157, 0.858824 ) ]
}

[node name="AppNavigator" type="Panel"]
margin_left = -101.0
margin_top = -62.0
margin_right = 100.0
margin_bottom = 62.0
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_top = -2.0
margin_right = 187.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.741176, 1, 0.792157, 1 )
text = "Navigator - USB"
align = 1

[node name="BtnClose" type="TextureButton" parent="."]
margin_left = 191.0
margin_top = 2.0
margin_right = 199.0
margin_bottom = 10.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 14.0
margin_right = -2.0
margin_bottom = -3.0
color = Color( 0.741176, 1, 0.792157, 1 )

[node name="InstallerElevator" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 67.0
mouse_filter = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
app = ExtResource( 10 )
extra = "1"

[node name="Icon" type="TextureRect" parent="InstallerElevator"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 16.0
size_flags_horizontal = 4
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="InstallerElevator"]
margin_left = 11.0
margin_top = 20.0
margin_right = 64.0
margin_bottom = 32.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.254902, 0.364706, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
text = "ele_2.0.1"
align = 1

[node name="InstallerRegistry" type="VBoxContainer" parent="."]
visible = false
margin_left = 8.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 67.0
mouse_filter = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
app = ExtResource( 10 )
extra = "2"

[node name="Icon" type="TextureRect" parent="InstallerRegistry"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 16.0
size_flags_horizontal = 4
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="InstallerRegistry"]
margin_left = 9.0
margin_top = 20.0
margin_right = 66.0
margin_bottom = 47.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.254902, 0.364706, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
text = "registry
installer"
align = 1

[node name="Readme" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 65.0
margin_right = 86.0
margin_bottom = 112.0
mouse_filter = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
app = ExtResource( 8 )

[node name="Icon" type="TextureRect" parent="Readme"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 16.0
size_flags_horizontal = 4
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Readme"]
margin_left = 16.0
margin_top = 20.0
margin_right = 59.0
margin_bottom = 32.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.254902, 0.364706, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
text = "readme"
align = 1

[node name="Readme2" type="VBoxContainer" parent="."]
visible = false
margin_left = 99.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 67.0
mouse_filter = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
app = ExtResource( 8 )

[node name="Icon" type="TextureRect" parent="Readme2"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 16.0
size_flags_horizontal = 4
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Readme2"]
margin_left = 16.0
margin_top = 20.0
margin_right = 59.0
margin_bottom = 32.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.254902, 0.364706, 0.4, 1 )
custom_fonts/font = SubResource( 1 )
text = "readme"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="Loader" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 201.0
margin_bottom = 124.0
color = Color( 0.741176, 1, 0.792157, 1 )
